resolve flicker on hover on arrows

--- a/dev/scss/_owl-theme.scss
+++ b/dev/scss/_owl-theme.scss
@@ -72,6 +72,7 @@
     background: url(/img/control-left.png) no-repeat center center;
     width: 20px;
     height: 102px;
+    position: relative;
 }
 
 .owl-next {
@@ -80,6 +81,7 @@
     width: 20px;
     height: 102px;
     float: right;
+    position: relative;
 }
 
 .owl-carousel__footer {
